# ottobot

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  ottobot.example.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
deploy/log-server/: index.html  ottobot-log-server.service  server.py
deploy/maintenance/: backup  update
docs/: hydro-ottawa-outages-api.md
examples/: example_bot.py
scripts/: probe_weather_cache.py  scan_multi_alerts.py
src/ottawa_meshbot/: __init__.py  bot.py  cli.py  context.py  registry.py  runner.py  simulator.py
src/ottawa_meshbot/commands/: echo.py  ping.py  roll.py
src/ottobot/: __init__.py  bot.py  channels.py  chunking.py  cli.py  config.py  context.py  discovery.py  loader.py  radio.py  registry.py  runner.py  simulator.py
src/ottobot/commands/: __init__.py  advert.py  bots.py  channels.py  echo.py  greet.py  ping.py  roll.py  source.py
src/ottobot/sinks/: __init__.py  discord.py  welcome.py
src/ottobot/tasks/: __init__.py  hydro_outages.py  rss.py  weather_alerts.py
tests/: conftest.py  helpers.py  test_bot.py  test_chunking.py  test_cli.py  test_command_advert.py  test_command_bots.py  test_command_channels.py  test_command_echo.py  test_command_ping.py  test_command_roll.py  test_command_source.py  test_config.py  test_context.py  test_discovery.py  test_listener_greet.py  test_log_server.py  test_on_start.py  test_runner.py  test_simulator.py  test_sink_discord.py  test_sink_welcome.py  test_sinks.py  test_task_hydro_outages.py  test_task_rss.py  test_task_weather_alerts.py  test_tasks.py
tests/fixtures/: onrm104_e.headers  onrm104_e.xml  weather_alerts.json  weather_alerts_tornado.json
