[project]
name = "ottawa-meshbot"
version = "0.1.0"
description = "An Ottawa mesh bot for MeshCore networks, with community-contributed commands"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "meshcore>=2.3.7",
]

[project.scripts]
ottawa-meshbot = "ottawa_meshbot.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "ty>=0.0.49",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["tests"]
