[project]
name = "ottobot"
version = "0.1.0"
description = "An Ottawa mesh bot for MeshCore networks, with community-contributed commands"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "meshcore>=2.3.7",
]

[project.scripts]
ottobot = "ottobot.cli:main"

[dependency-groups]
dev = [
    "black>=25",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.25",
    "ty>=0.0.56",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.black]
target-version = ["py313"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["tests"]
